src/objects/loan__Flexible_Rate_Setup_Interface__c.object
<CustomObject>
    <fields>
        <fullName>loan__Data_Migration_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Migration Batch</label>
        <referenceTo>loan__Data_Migration_Batch__c</referenceTo>
        <relationshipLabel>Flexible Rate Setup Interface</relationshipLabel>
        <relationshipName>Flexible_Rate_Setup_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Incoming_Loan_ID__c</fullName>
        <label>Incoming Loan ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account_No__c</fullName>
        <label>Loan Account No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan ID</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Flexible Rate Setup Interface</relationshipLabel>
        <relationshipName>Flexible_Rate_Setup_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Processing_Error__c</fullName>
        <label>Processing Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Flexible Rate Setup Interface</label>
    <nameField>
        <displayFormat>FRSIID-{0000000000}</displayFormat>
        <label>Flexible Rate Setup Interface ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flexible Rate Setup Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>